src/devtools/panel/tanaguru-devtools-panel.css
/* ... */
.launch-analysis-filters fieldset label {
	display: inline-block;
	margin-right: 1em;
}

/*? left panel (tabs) */
.cat-loading .loading {
	float: right;
	margin-right: 0.5em;
	position: unset;
	max-width: 20px;
	padding: unset;
}

.cat-loading .loading img {
	max-width: 100%;
}

/*? dashboard panel */
.dashboard {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: 100%;
}

.dashboard p.dashboard-message {
	font-size: 1em;
	font-weight: bold;
}

/*? sub tabs panel */
.subTabs ul[role="tablist"] {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.subTabs ul[role="tablist"] li {
	display: inline-block;
	padding: 0.5rem;
	background-color: #FFFFFF;
	color: #666666;
	border: 1px solid #666666;
	cursor: default;
}

.subTabs ul[role="tablist"] li[aria-selected="true"] {
	border-bottom: 0;
	background-color: #F2F9FB;
	color: #2b7b92;
	font-weight: bold;
}

.subTabs ul[role="tablist"] li:hover {
	background-color: #f5f5f5;
}

